2009-03-20  Dean Jackson  <dino@apple.com>

        Reviewed by Simon Fraser

        Build fix for ENABLE(3D_RENDERING)

        * rendering/RenderObject.h:
        (WebCore::makeMatrixRenderable):

2009-03-20  Dave Moore  <davemoore@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24705

        A bug in the V8 bindings is preventing chromium from setting the href on the
        location object...any attempt throws a security error, not just for javascript
        protocol

        * page/Location.idl:

2009-03-20  Craig Schlenter  <craig.schlenter@gmail.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24608

        Include stdio.h needed for printf on gcc 4.4.0

        * platform/KURLGoogle.cpp:

2009-03-20  Mike Belshe <mike@belshe.com>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24577

        Don't let comments at the end of an event handler
        break the event handler.

        No change in behavior, so no test.

        * bindings/v8/V8LazyEventListener.cpp:
        (WebCore::V8LazyEventListener::getWrappedListenerFunction):

2009-03-20  Norbert Leser  <norbert.leser@nokia.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24535

        Fixes missing line terminator character (;) after macro call.
        It is common practice to add the trailing ";" where macros are substituted
        and not where they are defined with #define.
        This change is consistent with other macro declarations across webkit,
        and it also solves compilation failure with symbian compilers. 
 
        No change in behavior, so no test.

        * bindings/js/JSDOMWindowShell.cpp:
        * bindings/js/JSEventListener.cpp:
        * bindings/js/JSImageConstructor.cpp:
        * bindings/js/JSInspectedObjectWrapper.cpp:
        * bindings/js/JSInspectorCallbackWrapper.cpp: